# encodi

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: argument_parser.h  flag_parser.hpp  user.hpp
include/credentials/: account.h  account.hpp  credentials_structure.hpp
include/credentials/cli/: account.h  account.hpp
include/flags/: flag_parser.hpp  flags_info.hpp  help.hpp  helpers.hpp
src/: argument_parser.cpp  flag_parser.cpp  main.cpp
src/credentials/: account.cpp
src/credentials/cli/: account.cpp
src/flags/: flag_parser.cpp  flags_info.cpp  help.cpp  helpers.cpp
